# logflow

./: .flake8  .gitignore  AGENTS.md  FUTURE_DEVELOPMENT.md  Jenkinsfile  Jenkinsfile.local  LICENSE  RATIONALE.md  README.md  logflow.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: mp_demo.py
logflow/: __init__.py  config.py  core.py  discovery.py  intercept.py
tests/: conftest.py  test_config.py  test_core.py  test_coverage_gap.py  test_discovery.py  test_forensics.py  test_intercept.py  test_lazy_enqueue.py  test_multiprocess.py
